test/libsolidity/syntaxTests/inline_arrays/unnamed_types_in_inline_array_3.sol
contract C {
    function f() public pure {
        [uint];
    }
}
// ----
// TypeError 9563: (53-57): Invalid mobile type.
